--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/ramseydsilva/socketer",
   "dependencies": {
     "request": "^2.34.0",
-    "socket.io-client": "^0.9.16"
+    "socket.io-client": "^0.9.16",
+    "xmlhttprequest": "^1.6.0"
   }
 }
